# onesnapshot-nlp

./: .gitattributes  .gitconfig  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
configs/: experiment_config.yaml  llm_prompt_config.yaml  public_mapping.yaml  public_workstreams.yaml
docs/: architecture.md  experiments.md
experiment_runs/: registry.json
src/: evaluate_functions.py  experiment.py  get_models.py  locations.py  main.py  methods.py  methods_utils.py  recreate_experiment.py  utility_functions.py
test/llm/: conftest.py  test_methods_utils.py
