[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "onesnapshot_nlp"
version = "0.1.0"
description = "NLP approach to evidence mapping"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # INSTALL REQUIRED PACKAGES HERE THEN RUN . setup.sh recreate 
    "python-dotenv", # To read .env file
    "pandas",
    "torch",
    "sentence_transformers",
    "transformers",
    "dataclasses",
    "PyYAML",
    "dwutils[bedrock]>=0.7.6",
    "pytest"
    ]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "ipykernel",
    "nbconvert",
    "pytest",
    "pytest-cov",
    "boto3", # for caching to s3
    "tqdm",
    "tomlkit",
]

[tool.ruff]
# Ruff defaults mostly taken from https://docs.astral.sh/ruff/configuration/
exclude = [
    "archive",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",

    

    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",

    

    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

indent-width = 4
src = ["onesnapshot_nlp"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = """
--cov=src
--cov-report=term-missing
"""
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.dwutils]
default_batch_size = 10000
s3_region_key = "S3_REGION"
s3_personal_key = "S3_PREFIX"
s3_team_key_prefix = "S3_PREFIX_TEAM_"
main_git_branch = "main"
mlflow_artifact_path = "model"
mlflow_experiment = "Default"
# mlflow_model = 
# mlflow_download_path = 

